# opencti-attribution-tools

./: .gitignore  README.md  poetry.toml  pyproject.toml
attribution_tools/: attribution_model.py  generator.py  parsers.py  pyspark_main.py  train_attribution_model.py  utils.py
configuration_tests/: configuration_test_tools.py  test_configuration_test_tools.py
tests/: test_attribution_model.py  test_parsers.py
tests/data/: incident.json  incident_str.txt  model_test_None.pickle
